--- a/css/mobileStyle.css
+++ b/css/mobileStyle.css
@@ -33,6 +33,9 @@
 
 }
 
+#leonardsClickBox{
+	display:none;
+}
 
 }
 
@@ -298,6 +301,9 @@
 		display:none;
 	}
 
+	#leonardsClickBox{
+		display:block;
+	}
 }
 /*-------------------IPHONE------------------------------*/
 @media(max-width:30em) {
@@ -381,10 +387,10 @@
 	
 	.fieldset{
 		width:100%;
-		height: auto;
+		height:auto;
 		border:0 none;
 		box-sizing: border-box;
-		padding: 10px 30px;
+		padding: 0% 15% 5% 10%;
 		margin-top: 1em;
 		right:0;
 		left:0;
@@ -561,6 +567,10 @@
 
 	.callToAction{
 		display:none;
+	}
+
+	#leonardsClickBox{
+		display:block;
 	}
 
 }
